# mcp-openapi-proxy

./: .flake8  .gitignore  README.md  pyproject.toml  sample_mcpServers.json  upload_readme_to_readme.py
.github/workflows/: testpypi.yaml
examples/: WIP-jellyfin-claude_desktop_config.json  apis.guru-claude_desktop_config.json  asana-claude_desktop_config.json  box-claude_desktop_config.json  claude_desktop_config.json-asana  claude_desktop_config.json-atlassian  claude_desktop_config.json-azure  claude_desktop_config.json-brevo  claude_desktop_config.json-chatgpt  claude_desktop_config.json-flyio  claude_desktop_config.json-getzep  claude_desktop_config.json-ghost  claude_desktop_config.json-github  claude_desktop_config.json-gitlab  claude_desktop_config.json-glama  claude_desktop_config.json-openai  claude_desktop_config.json-openwebui  claude_desktop_config.json-perplexity  claude_desktop_config.json-qdrant  claude_desktop_config.json-quivr  claude_desktop_config.json-render  claude_desktop_config.json-slack  claude_desktop_config.json-vectara  elevenlabs-claude_desktop_config.json  getzep-claude_desktop_config.json  getzep.swagger.json  netbox-claude_desktop_config.json  notion-claude_desktop_config.json  slack-claude_desktop_config.json  virustotal-claude_desktop_config.json  virustotal.openapi.json  virustotal.openapi.yml  wolframalpha-claude_desktop_config.json
mcp_any_openapi/: __main__.py  server_fastmcp.py  server_lowlevel.py  utils.py
mcp_openapi_proxy/: __init__.py  __main__.py  handlers.py  logging_setup.py  openapi.py  server_fastmcp.py  server_highlevel.py  server_lowlevel.py  sl_client.py  types.py  utils.py
scripts/: check_openapi.sh  diagnose_examples.py
tests/: conftest.py
tests/integration/: test_apisguru_integration.py  test_asana_integration.py  test_box_integration.py  test_chat_integration.py  test_elevenlabs_integration.py  test_example_configs.py  test_fly_machines_integration.py  test_getzep_integration.py  test_github_integration.py  test_integration_json_access.py  test_jellyfin_public_demo.py  test_netbox_integration.py  test_notion_integration.py  test_openapi_integration.py  test_openwebui_integration.py  test_petstore_api_existence.py  test_quivr_integration.py  test_render_integration.py  test_render_integration_lowlevel.py  test_schema.py  test_slack_integration.py  test_ssl_verification.py  test_tool_invocation.py  test_tool_prefix.py  test_verba.py  test_verba_mapping.py  test_virustotal_integration.py  test_wolframalpha_integration.py
tests/unit/: test_additional_headers.py  test_capabilities.py  test_embedded_openapi_json.py  test_input_schema_generation.py  test_mcp_tools.py  test_openapi.py  test_openapi_spec_parser.py  test_openapi_tool_name_length.py  test_parameter_substitution.py  (+6 more)
(+1 files in other folders)
