[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-openapi-proxy"
version = "0.1.0"
description = "MCP server for exposing OpenAPI specifications as MCP tools."
readme = "README.md"
authors = [
  { name = "Matthew Hand", email = "matthewhandau@gmail.com" }
]
dependencies = [
  "mcp[cli]>=1.2.0",
  "python-dotenv>=1.0.1",
  "requests>=2.25.0",
  "fastapi>=0.100.0",
  "pydantic>=2.0",
  "prance>=23.6.21.0",
  "openapi-spec-validator>=0.7.1",
]

[project.scripts]
mcp-openapi-proxy = "mcp_openapi_proxy:main"  # Point to __init__.py:main, ya cunt

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.setuptools.packages]
find = {include = ["mcp_openapi_proxy", "mcp_openapi_proxy.*"]}
